<package>
  <name>hopscotch_map_catkin</name>
  <version>0.0.0</version>
  <description>hopscotch_map_catkin</description>
  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>